# CPP-project

./: GarageProject.sln  README.md
GarageProject/: Battery.cpp  Battery.h  CMakeLists.txt  Car.cpp  Car.h  Coden.cpp  Coden.h  ElectricEngine.cpp  ElectricEngine.h  Engine.cpp  Engine.h  GarageProject.vcxproj  GarageProject.vcxproj.filters  GasolineEngine.cpp  GasolineEngine.h  Main.cpp  Malfunction.cpp  Malfunction.h  Motorcycle.cpp  Motorcycle.h  OilPump.cpp  OilPump.h  Owner.cpp  Owner.h  Part.cpp  Part.h  Person.cpp  Person.h  Profession.h  Veichle.cpp  Veichle.h  VeichleProblems.cpp  VeichleProblems.h  Wheel.cpp  Wheel.h  Worker.cpp  Worker.h
GarageProject/Debug/: vc140.idb  vc141.idb
GarageProject/Debug/GarageProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GarageProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
